--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -19,6 +19,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 /*
  * Стили компонента App
